    previously added using "Add tag file..." action (#3525480)
  - Removed "Add tag file..." action (#3525480)
  - Fixed Tag Index Browser dockable refresh bug (#3525480)
  - Added "Update current file" and "Remove current file" actions
  - Merged add/remove project actions (#3525601)
  - Added "Remove all tags" action (#3527302)

  [Jarek Czekalski]
  - Updated plugin's description
  
Version 2.2: Requires jEdit 4.5, Java 1.6, SuperAbbrevs 1.0, Lucene 2.8, Completion 0.3. 
  Optional: ProjectViewer 3.4.0, Navigator 2.3
  - Add option to not show the progress dockable automatically.
  
Version 2.1.1: Requires jEdit 4.5, Java 1.5, SuperAbbrevs 0.32, LucenePlugin 2.6.1 
  and Completion 0.2. Optional: ProjectViewer 2.9, Navigator 2.2.0.0
  
  - Updated the build to use the new lucene jars from LucenePlugin. 
  - Updated the tag candidate that is used by CodeComplete.
  - Got rid of a compilation warning.
  - Added code to use the Completion plugin for completions.
  - Added progress indication for the Ctags execution.
  
Version 2.1: Requires jEdit 4.4pre1, Java 1.5, SuperAbbrevs 0.32 and
  LucenePlugin 2.5. Optional: ProjectViewer 2.9, Navigator 2.2.0.0
  
  - Use a separate class for the AutoJump message, to allow the plugin to be used without Navigator.

Version 2.0: Requires jEdit 4.4pre1, Java 1.5, SuperAbbrevs 0.32 and
  LucenePlugin 2.5. Optional: ProjectViewer 2.9, Navigator 2.2.0.0
- Changed CtagsInterface to use a Lucene index for the tag information instead
  of a relational database. This was done mainly to improve performance of
  queries that need to check substrings of the values in the database.
  Switching to Lucene also allows fuzzy tag queries.
  As a result:
  - Dynamic action queries (which used to be in SQL) need to be converted
    manually to Lucene queries, e.g.:
    _name:{tag} AND kind:function AND origin:PROJECT\:{project}
  - All database-related configuration was removed, including the "Change
    database settings" dialog.